--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Blogging application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node app.ts",
+    "startDev": "nodemon app.ts"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,15 @@
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-mongodb-session": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/dompurify": "^2.3.3",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/jsdom": "^16.2.14",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/marked": "^4.0.1",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.4"
   }
